@@ -1,4 +1,9 @@
-﻿[B]Version 2.2.2[/B]
+﻿[B]Version 2.2.3[/B]
+[+] Проигрыватель: Добавлена возможность запускать через .strm файлы (plugin://plugin.video.torrenter/?action=playSTRM&url=URL_ENCODED_MAGNET_PATH_HTTP)
+
+[B]Version 2.2.2[/B]
+[+] Списки Медиа: Обновлен KickAssSo (by GriffeyJuni0r)
+[+] Поиск: Исправлен RuTor
 [+] Поиск: Исправлен RuTrackerOrg, T411FR
 
 [B]Version 2.2.1[/B]
